# nimporter

./: .coveragerc  .gitignore  .tokeignore  LICENSE  README.md  build.exp  build.lib  build.out  clean.py  conftest.py  conftest.py.bak  dist.py  foo.nim  gen_docs.ps1  gen_docs.sh  github_actions_template.yml  main_test.py  nim.py  nimporter.py  nimporter.save.py  nimporter.savethis.py  nimporter_cli.py  pyproject.toml  pyproject.toml.update-this  requirements.txt  requirements_dev.txt  run_tests.sh  setup.py  test_dist.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: all_workflows.yml  dev_workflow.yml  main.yml  manual_windows.yml  poetry_build_and_test.yml  publish_to_pypi.yml  semgrep.yml  test_nim_devel.yml
docs/: index.html  nimporter.m.html  test-docs.html
examples/: calc.py  calculator.nim  dictionary.py  hello.nim  hello_world.py  nim_dict.nim  py.nim
examples/asdf/nimmer/: nimmer.nim
examples/asdf/wrong/: wrong.nim  wrong.nimble
examples/bspline/: bspline.nim  bspline.nimble
examples/dist_test/: requirements.txt  setup.py
examples/dist_test/foofoo/: bar.nim  foo.py  nimp.py
examples/dist_test/foofoo/bazzle/: buzzle.py
examples/foo/: main.py  main2.py
examples/foo/bar/: baz.py
examples/myfoo/: switches.py
examples/setup_test/: setup.py
examples/setup_test/nimext/custom/: .switches  hi.nim  switches.py
ff/: foo  foo.nim  hi.pyx  libfoo.dylib  setup.py
myext/: main.nim  myext.nimble
mylib/: main  mylib  mylib.nimble  mylib2  packages_temp.json
nimporter/: __init__.py  bitmap.nim  calc.py  cli.py  lib.py  nexporter.py  nimporter.py  nimpy.py  test.py
nimporter/foo/: bar.nim
nimpy/: bar.nim  bitmap.nim  calc.py  calculator.nim  nath.nim  nimpy.py  test.py
nimpy/foo/: bar.nim
setup_test/: nimext.py  setup.py
setup_test/mypackage/mylib/: mylib.nim  subber.nim
tests/: MANIFEST.in  README.md  __init__.py  mod_a.nim  test_build.py  test_distribution.py  test_import.py  test_installation.py  test_nexporting.py  test_nimporter.py  test_nimporter.py.bak  test_nimporting.py
tests/data/: py_module.py  setup.py
tests/data/ext_lib_basic/: ext_lib_basic.nim
tests/data/pkg1/pkg2/ext_lib_in_pack/: ext_lib_in_pack.nimble
tests/integration/: test_nexporting.py
tests/legacy/lib10/: lib10.nim.cfg
tests/legacy/lib2/: switches.py
tests/legacy/lib9/: lib9.nims
tests/legacy/pkg1/pkg2/: mod2.nim
tests/legacy/pkg3/: mod5.nim
tests/legacy/proj3/: setup.py
tests/legacy/proj3/proj3/: __init__.py  proj3.py
tests/legacy/proj3/proj3/EXCLUDE/: excluded.nim
tests/lib10/: lib10.nim
tests/lib2/: lib2.nimble  switches.py
tests/lib3/: lib3.nim
tests/lib9/: lib9.nimble
tests/nim-extensions/lib2/: @m..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy@spy_lib.nim.c  @m..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy@spy_utils.nim.c  @mlib2.nim.c  lib2.json  stdlib_assertions.nim.c  stdlib_os.nim.c  stdlib_strutils.nim.c  stdlib_system.nim.c  stdlib_times.nim.c
tests/nimporting/extension_libraries/: test_nimport_ext_libs.py
tests/nimporting/extension_modules/: test_nimport_ext_mods.py
tests/pkg1/: error.nim  mod1.nim  mod2.nim  warn.nim
tests/pkg5/: mod5.nim
tests/proj1/: MANIFEST.in  setup.py
tests/proj1/nim-extensions/proj1.lib1/: @m..@s..@s..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy@spy_lib.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy@spy_types.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy@spy_utils.nim.c  @mlib1.nim.c  lib1.json  stdlib_locks.nim.c  stdlib_os.nim.c  stdlib_posix.nim.c  stdlib_sharedlist.nim.c  stdlib_system.nim.c  stdlib_times.nim.c
tests/proj1/nim-extensions/proj1.performance/: @m..@s..@s..@s..@s..@s..@s.nimble@spkgs@snimpy-0.1.0@snimpy.nim.c  @mperformance.nim.c  performance.json  stdlib_assertions.nim.c  stdlib_asyncfutures.nim.c  stdlib_dynlib.nim.c  stdlib_os.nim.c  stdlib_strutils.nim.c  stdlib_system.nim.c  stdlib_times.nim.c
tests/proj1/proj1/: proj1.py
tests/proj3/: setup.py
tests/proj3/proj3/: __init__.py
tests/unit/: test_nimporting.py
